--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,3 +11,42 @@ html{
 .body{
   font-family: 'Rubik Mono One', sans-serif;
 }
+
+.box{
+  position: relative;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.red{
+  background-color: red;
+}
+
+.green{
+  background-color: seagreen;
+}
+
+.yellow{
+  background-color: yellow;
+}
+
+.shoes-1, .shoes-2, .shoes-3{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+h2{
+  text-align: center;
+  color: yellow;
+  font-size: 50px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.shoes-3 > h2{
+  color: green;
+}
