--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ html{
   scroll-behavior: smooth;
 }
 
-.body{
+body{
   font-family: 'Rubik Mono One', sans-serif;
 }
 
@@ -71,8 +71,6 @@ a{
 
 
 h2{
-  width: 70%;
-  margin: 0 auto;
   text-align: center;
   color: yellow;
   font-size: 50px;
