--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,29 +17,34 @@ header{
   width: 100%;
   z-index: 30;
   text-align: right;
+  padding: 40px 20px;
 }
 
-li{
+nav ul li{
   display: inline-block;
-  background-color: ivory;
-  border-radius: 50%;
+  list-style: none;
   margin: 10px;
 }
 
-a{
+nav ul li a{
   display: inline-block;
   text-decoration: none;
+  text-align: center;
+  background-color: ivory;
+  border-radius: 50%;
   color: black;
-  font-size: 12px;
-  font-weight: 900;
-  padding: 8px 10px;
-  line-height: 100%;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, .5);
+}
+
+nav ul li a:hover{
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .5);
 }
 
 .box{
   position: relative;
-  background-size: cover;
-  width: 100%;
   height: 100vh;
 }
 
@@ -55,22 +60,26 @@ a{
   background-color: yellow;
 }
 
-.shoes-1, .shoes-2, .shoes-3{
+.shoes{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+.shoes img{
+  width: 100%;
+}
+
 
 h2{
   text-align: center;
   color: yellow;
-  font-size: 50px;
+  font-size: 3vw;
   text-transform: uppercase;
   font-weight: 900;
 }
 
-.shoes-3 > h2{
+.yellow > .shoes > h2{
   color: green;
 }
